--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Saltfish
+title: edgest.world
 email: dyingsunlight@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  盐鱼或咸鱼
+  nothing special
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://saltfish.blog" # the base hostname & protocol for your site, e.g. http://example.com
