--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "devDependencies": {
     "@nuxt/content": "^2.5.2",
     "@types/node": "^18",
-    "nuxt": "^3.4.1"
-  },
-  "dependencies": {
-    "consola": "^3.1.0"
+    "consola": "^3.1.0",
+    "less": "^4.1.3",
+    "nuxt": "^3.4.1",
+    "normalize.css": "^8.0.1"
   }
 }
