--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/node": "^18",
     "consola": "^3.1.0",
     "less": "^4.1.3",
-    "nuxt": "^3.4.1",
-    "normalize.css": "^8.0.1"
+    "nuxt": "^3.4.1"
   }
 }
