--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "consola": "^3.1.0",
     "less": "^4.1.3",
     "nuxt": "^3.4.1",
-    "normalize.css": "^8.0.1"
+    "nuxt-simple-sitemap": "^2.4.11"
   }
 }
